# delilah

./: .gitignore  .gitmodules  README  README.md  delilah.bb  delilah.bb.debug  delilah.bb.release
files/: .delilah  .gitignore  .profile  CMakeLists.txt
files/include/: delilah.h
files/include/commands/: commands.h
files/include/conf/: conf.h  hermes.h  version.h
files/include/functions/: cpu.h  debug.h  file.h  fs.h  index.h  map.h  meta.h  sort.h  tsl.h  version.h
files/include/functions/hw/: filter.h
files/include/hermes/: command.h  config.h  configure.h  opcodes.h  status.h
files/include/hw/: filter.h
files/include/hw/xfilter/: xfilter.h  xfilter_hw.h
files/include/irq/: irq.h
files/include/loader/: loader.h
files/include/mem/: mem.h
files/include/ubpf/: ebpf.h  ubpf.h  ubpf_int.h
files/include/util/: errors.h  log.h  ncurses.h  time.h  units.h
files/src/: delilah.c
files/src/commands/: clear_cache.c  clear_state.c  clone.c  execute.c  execute_jit.c
files/src/functions/: tsl.cpp
files/src/hermes/: configure.c
files/src/hw/: .filter.c.swp  filter.c
files/src/hw/xfilter/: xfilter.c  xfilter_linux.c  xfilter_sinit.c
files/src/irq/: gpio.c
files/src/loader/: loader.c
files/src/mem/: direct.c  malloc.c  udma.c
files/src/ubpf/: ubpf_loader.c  ubpf_vm.c
files/src/util/: log.c  ncurses.c
files/tsl/: CMakeLists.txt
files/tsl/include/: tslintrin.hpp
files/tsl/include/static/: tsl_static.hpp
files/tsl/include/static/simd/: simd_primitive_concepts.hpp  simd_type.hpp  simd_type_concepts.hpp
files/tsl/include/static/utils/: preprocessor.hpp  type_concepts.hpp  type_helper.hpp
